added 'Your Name'

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
 
       <header>
-        <h1>Your Name</h1>
+        <h1>Tyler May</h1>
       </header>
 
     <div class="wrapper">
